--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Wizcorp/optpeerdeps.git"
+  },
   "author": "Ron Korving <r.korving@wizcorp.jp>",
   "license": "MIT"
 }
