Fixed e-mail address

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "type": "git",
     "url": "https://github.com/Wizcorp/optpeerdeps.git"
   },
-  "author": "Ron Korving <r.korving@wizcorp.jp>",
+  "author": "Ron Korving <rkorving@wizcorp.jp>",
   "license": "MIT"
 }
