--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "optpeerdeps",
+  "name": "codependency",
   "version": "0.1.0",
   "description": "Optional peer dependencies",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Wizcorp/optpeerdeps.git"
+    "url": "https://github.com/Wizcorp/codependency.git"
   },
   "author": "Ron Korving <rkorving@wizcorp.jp>",
   "license": "MIT"
