--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "codependency",
-  "keywords": ["peer", "dependency", "dependencies", "require", "module", "semver"],
+  "keywords": [
+    "peer",
+    "dependency",
+    "dependencies",
+    "require",
+    "module",
+    "semver"
+  ],
   "version": "0.1.4",
   "description": "Optional peer dependencies",
   "main": "index.js",
   "dependencies": {
-    "semver": "5.0.1"
+    "semver": "^5.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
