--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "semver": "^5.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ."
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Wizcorp/codependency.git"
   },
   "author": "Ron Korving <rkorving@wizcorp.jp>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^3.19.0"
+  }
 }
