pre-commit module for testing

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Ron Korving <rkorving@wizcorp.jp>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "pre-commit": "^1.2.2"
   }
 }
